# databricks-bundle-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ASSETS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GET_STARTED_WITH_PERMISSIONS.md  PERMISSIONS_GUIDE.md  PERMISSIONS_QUICK_REFERENCE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  cluster_configs.yml  databricks.yml  databricks_template_schema.json  permissions.yml  pyproject.toml  requirements-dev.txt  variables.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation.yml  4-task-chore.yml  config.yml
.github/workflows/: test.yml
assets/dbx-ro-query/: README.md  databricks_template_schema.json
assets/sdp-checkpoint-recovery/: README.md  databricks_template_schema.json
docs/: PERMISSIONS_ARCHITECTURE.md  PERMISSIONS_SETUP.md  SETUP_GROUPS.md
resources/: sample_ingestion.job.yml  sample_pipeline.pipeline.yml  sample_pipeline_trigger.job.yml
scripts/: example_repo_config.json  regenerate-example.sh
src/jobs/: ingest_to_raw.py  transform_to_silver.py
src/pipelines/: bronze.py  silver.py
template/: update_layout.tmpl
template/{{.project_name}}/: .gitignore  .gitlab-ci.yml.tmpl  QUICKSTART.md.tmpl  README.md.tmpl  bundle_init_config.json.tmpl  databricks.yml.tmpl  variables.yml.tmpl
template/{{.project_name}}/docs/: CI_CD_SETUP.md.tmpl  PERMISSIONS_SETUP.md.tmpl  SETUP_GROUPS.md.tmpl
template/{{.project_name}}/resources/: schemas.yml.tmpl  (+3 more)
tests/: README.md  conftest.py  requirements_dev.txt  test_cicd.py  test_content.py  test_generation.py
tests/assets/: conftest.py  test_dbx_ro_query.py  test_framework.py  test_sdp_checkpoint_recovery.py
tests/configs/: full_cicd_aws.json  full_github_actions_aws.json  full_gitlab_aws.json  full_multi_workspace.json  full_multi_workspace_cicd_ado.json  full_multi_workspace_github.json  full_no_dev.json  full_no_permissions.json  full_serverless.json  full_with_cicd_ado.json  full_with_dev.json  full_with_github_actions.json  full_with_gitlab.json  full_with_sp.json  minimal_classic.json  minimal_multi_workspace.json  minimal_serverless.json  minimal_with_cicd_ado.json  minimal_with_github_actions.json  minimal_with_gitlab.json
(+19 files in other folders)
